--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 500px;
     background-size: cover;
     background: #f6f8fc;
     background-position: center;
@@ -125,6 +125,7 @@ header {
     position: relative;
     width: 400px;
     height: 440px;
+    margin: 100px;
     background: #f8f9fa;
     border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
@@ -189,7 +190,7 @@ header {
     top: -5px;
 }
 
-.input-box input  {
+.input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -197,8 +198,26 @@ header {
     outline: none;
     font-size: 1em;
     color: #162938;
-    font-weight: 600;
+    font-weight: 500;
     padding: 0 35px 0 5px;
+}
+
+.input-box .code {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.1s;
+}
+
+.input-box input:focus~.code,
+.input-box input:valid~.code {
+    opacity: 1;
 }
 
 .input-box .icon {
@@ -207,6 +226,21 @@ header {
     font-size: 1.2em;
     color: #162938;
     line-height: 57px;
+}
+
+.gender {
+    font-size: .9em;
+    color: #162938;
+    font-weight: 500;
+    margin: -20px 0 10px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.gender label input {
+    accent-color: #162938;
+    margin: 0 5px;
 }
 
 .btn {
@@ -239,6 +273,13 @@ header {
 
 .login-register p a:hover {
     text-decoration: underline;
+}
+
+.error {
+    font-size: .9em;
+    color: red;
+    font-weight: 500;
+    margin: 15px 7px 20px;
 }
 
 /*BREAKPOINTS*/
